<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/defaultScreenPadding"
            android:paddingHorizontal="@dimen/defaultScreenPadding"
            android:paddingBottom="30dp">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvDedicatedMsg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/msg_app_dedicated"
                android:gravity="center"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h2"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvDedicatedName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDedicatedMsg"
                android:text="@string/name_hope"
                android:gravity="center"
                android:textColor="?colorTextMain"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cardAppLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDedicatedName"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="?colorPrimaryVariant"
                android:layout_marginTop="20dp"
                >
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/ic_app_logo"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:contentDescription="@string/cont_desc_app_logo"
                    />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvAboutApp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardAppLogo"
                android:layout_marginTop="30dp"
                android:text="@string/msg_about_sosapp"
                android:gravity="center"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h3"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvAboutDevTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAboutApp"
                android:layout_marginTop="30dp"
                android:text="@string/title_about_dev"
                android:gravity="center"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h2"
                bind_isUnderlined="@{true}"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvAboutDevMsg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAboutDevTitle"
                android:layout_marginTop="15dp"
                android:text="@string/msg_about_us"
                android:textColorLink="?colorTextDark"
                android:gravity="center"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h3"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvSupportTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAboutDevMsg"
                android:layout_marginTop="30dp"
                android:text="@string/title_support_us"
                android:gravity="center"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h2"
                bind_isUnderlined="@{true}"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnShareApp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnRateApp"
                app:layout_constraintTop_toBottomOf="@id/tvSupportTitle"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_marginTop="15dp"
                android:text="@string/title_share"
                android:textColorLink="?colorTextDark"
                android:gravity="center"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h3"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnRateApp"
                app:layout_constraintStart_toEndOf="@id/btnShareApp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSupportTitle"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_marginTop="15dp"
                android:text="@string/title_rate"
                android:textColorLink="?colorTextDark"
                android:gravity="center"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h3"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnMoreApps"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnShareApp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_marginTop="5dp"
                android:text="@string/title_more_apps"
                android:textColorLink="?colorTextDark"
                android:gravity="center"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h3"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnTranslate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnMoreApps"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:text="@string/title_help_translate"
                android:textColorLink="?colorTextDark"
                android:gravity="center"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h3"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvContactTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnTranslate"
                android:layout_marginTop="30dp"
                android:text="@string/title_contact_us"
                android:gravity="center"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h2"
                bind_isUnderlined="@{true}"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvContactMsg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvContactTitle"
                android:layout_marginTop="10dp"
                android:text="@string/msg_contact_us"
                android:gravity="center"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h3"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvContactMail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvContactMsg"
                android:layout_marginTop="10dp"
                android:text="@string/email_publisher"
                android:gravity="center"
                android:textColor="?colorTextMain"
                android:textSize="@dimen/text_size_h2"
                bind_isUnderlined="@{true}"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>