<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".uiModules.sendSOS.ActivitySendSOS">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/tvSOSSentMsg"
            android:text="@string/msg_sos_sent_to"
            android:layout_marginVertical="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvBackPressWarning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="@dimen/defaultScreenPadding"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="?colorTextMain"
            android:visibility="gone"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_sending_sos_in"
            android:id="@+id/tvSOSSendingMsg"
            app:layout_constraintBottom_toTopOf="@id/tvSOSCountDown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            android:textSize="22sp"
            android:textColor="?colorTextMain"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="3"
            android:id="@+id/tvSOSCountDown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="150sp"
            android:gravity="center"
            android:background="@drawable/bg_circle_text_main"
            android:textColor="?colorTextMain"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvBackPressWarning"
            android:text="@string/msg_warning_sos_back_press_close"
            app:layout_constraintBottom_toTopOf="@id/btnCallPolice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/text_size_h4"
            android:gravity="center"
            android:paddingHorizontal="@dimen/defaultScreenPadding"
            android:textColor="?colorTextMain"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:text="@string/action_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnSendNow"
            app:backgroundTint="?colorPrimaryVariant"
            style="@style/Theme.SOSApp.MaterialButton"
            android:textColor="?colorTextMain"
            android:layout_marginEnd="1dp"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSendNow"
            android:text="@string/action_send_now"
            android:layout_marginStart="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:backgroundTint="?colorPrimaryVariant"
            style="@style/Theme.SOSApp.MaterialButton"
            android:textColor="?colorTextMain"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCallPolice"
            android:text="@string/action_call_police"
            tools:visibility="invisible"
            android:visibility="invisible"
            app:icon="@drawable/ic_call"
            app:iconGravity="textStart"
            app:iconTint="?colorTextMain"
            app:iconPadding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:backgroundTint="?colorPrimaryVariant"
            style="@style/Theme.SOSApp.MaterialButton"
            android:textColor="?colorTextMain"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>